--- a/NaturalTheScattering/src/main/resources/static/carte/booster.html
+++ b/NaturalTheScattering/src/main/resources/static/carte/booster.html
@@ -2,21 +2,19 @@
 <html>
 
 <head>
-  <meta charset="utf-8"/>
+  <meta charset="utf-8" />
   <title>Booster Opening</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-  <script type="text/javascript" src="Tirage.js" defer></script>
-  
-</head>
+  <script type="text/javascript" src="tirage.js"></script>
   <style>
-html *
-  {
-    color: #ffffff
-  } 
-</style>
-  
+    html * {
+      color: #ffffff
+    }
+  </style>
+</head>
+
 <body class="bg-dark vw-99 p-5 overflow-hidden">
-  <div id = "div1" class="container rounded d-flex flex-row align-items-center bg-secondary position-relative mx-auto p-5">
+  <div id="div1" class="container rounded d-flex flex-column align-items-center bg-secondary position-relative mx-auto p-5">
     <button type="button" onclick="tirage()" class="btn btn-primary btn-lg mx-auto">Ouvrir un Booster</button>
     <a type="button" class="btn-close bg-danger position-absolute end-0 top-0 translate-middle" aria-label="Home" href="../"></a>
   </div>
