--- a/NaturalTheScattering/src/main/resources/static/carte/collection.html
+++ b/NaturalTheScattering/src/main/resources/static/carte/collection.html
@@ -2,86 +2,104 @@
 <html>
 
 <head>
-  <meta charset="utf-8"/>
+  <meta charset="utf-8" />
   <title>Natural The Scattering Client App</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+  <style>
+    .card {
+      width: 15em;
+      height: 20em;
+    }
+  </style>
 </head>
 
 <body class="bg-dark vw-99 p-5 overflow-x-hidden">
   <div class="container rounded bg-secondary p-3 position-relative ms-auto">
     <h1 class="text-center mb-5 text-white">Collection</h1>
 
-    <div class="container d-flex flex-row flex-wrap align-content-centerbg-dark rounded p-3">
-        <div class="card flex-shrink-0 m-2" style="width: 18rem;">
-          <!-- SVG placeholder -->
-          <svg class="bd-placeholder-img card-img-top" width="100%" height="180" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Image cap" preserveAspectRatio="xMidYMid slice" focusable="false">
-            <title>Placeholder</title>
-            <rect width="100%" height="100%" fill="#868e96" style="--darkreader-inline-fill: #585f63;" data-darkreader-inline-fill=""></rect>
-            <text x="35%" y="50%" fill="#dee2e6" dy=".3em" style="--darkreader-inline-fill: #d6d2cd;" data-darkreader-inline-fill="">Image cap</text>
-          </svg>
-          <div class="card-body">
-            <h5 class="card-title">Exodia le maudit part 1/175</h5>
-            <p class="card-text">Il sert vraiement à rien pour l'instant</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
-          </div>
+    <div class="container d-flex flex-row flex-wrap flex-shrink-0 align-content-center bg-dark rounded p-3">
+      <div class="card flex-shrink-0 m-2">
+        <!-- SVG placeholder -->
+        <svg class="bd-placeholder-img card-img-top" width="100%" height="130" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Image cap" preserveAspectRatio="xMidYMid slice" focusable="false">
+          <title>Placeholder</title>
+          <rect width="100%" height="100%" fill="#868e96" style="--darkreader-inline-fill: #585f63;" data-darkreader-inline-fill=""></rect>
+          <text x="35%" y="50%" fill="#dee2e6" dy=".3em" style="--darkreader-inline-fill: #d6d2cd;" data-darkreader-inline-fill="">Image cap</text>
+        </svg>
+        <div class="card-body">
+          <h5 class="card-title">Exodia le maudit</h5>
+          <p class="card-text">Il est puissant... j'imagine?</p>
+          <a href="#" class="btn btn-primary">Description</a>
         </div>
+      </div>
 
-        <div class="card flex-shrink-0 m-2 bg-dark opacity-50 text-white" style="width: 18rem;">
-          <!-- SVG placeholder -->
-          <svg class="bd-placeholder-img card-img-top" width="100%" height="180" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Image cap" preserveAspectRatio="xMidYMid slice" focusable="false">
-            <title>Placeholder</title>
-            <rect width="100%" height="100%" fill="#868e96" style="--darkreader-inline-fill: #585f63;" data-darkreader-inline-fill=""></rect>
-            <text x="35%" y="50%" fill="#dee2e6" dy=".3em" style="--darkreader-inline-fill: #d6d2cd;" data-darkreader-inline-fill="">Image cap</text>
-          </svg>
-          <div class="card-body">
-            <h5 class="card-title">Exodia le maudit part 2/175</h5>
-            <p class="card-text">Vous n'avez pas encore cette carte</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
-          </div>
+      <div class="card flex-shrink-0 m-2 bg-dark opacity-50 text-white">
+        <!-- SVG placeholder -->
+        <svg class="bd-placeholder-img card-img-top" width="100%" height="130" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Image cap" preserveAspectRatio="xMidYMid slice" focusable="false">
+          <title>Placeholder</title>
+          <rect width="100%" height="100%" fill="#868e96" style="--darkreader-inline-fill: #585f63;" data-darkreader-inline-fill=""></rect>
+          <text x="35%" y="50%" fill="#dee2e6" dy=".3em" style="--darkreader-inline-fill: #d6d2cd;" data-darkreader-inline-fill="">Image cap</text>
+        </svg>
+        <div class="card-body">
+          <h5 class="card-title">Nom carte</h5>
+          <p class="card-text">Vous n'avez pas encore cette carte</p>
+          <a href="#" class="btn btn-primary">Description</a>
         </div>
+      </div>
 
-        <div class="card flex-shrink-0 m-2" style="width: 18rem;">
-          <!-- SVG placeholder -->
-          <svg class="bd-placeholder-img card-img-top" width="100%" height="180" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Image cap" preserveAspectRatio="xMidYMid slice" focusable="false">
-            <title>Placeholder</title>
-            <rect width="100%" height="100%" fill="#868e96" style="--darkreader-inline-fill: #585f63;" data-darkreader-inline-fill=""></rect>
-            <text x="35%" y="50%" fill="#dee2e6" dy=".3em" style="--darkreader-inline-fill: #d6d2cd;" data-darkreader-inline-fill="">Image cap</text>
-          </svg>
-          <div class="card-body">
-            <h5 class="card-title">Exodia le maudit part 3/175</h5>
-            <p class="card-text">Il sert vraiement à rien pour l'instant</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
-          </div>
+      <div class="card flex-shrink-0 m-2">
+        <!-- SVG placeholder -->
+        <svg class="bd-placeholder-img card-img-top" width="100%" height="130" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Image cap" preserveAspectRatio="xMidYMid slice" focusable="false">
+          <title>Placeholder</title>
+          <rect width="100%" height="100%" fill="#868e96" style="--darkreader-inline-fill: #585f63;" data-darkreader-inline-fill=""></rect>
+          <text x="35%" y="50%" fill="#dee2e6" dy=".3em" style="--darkreader-inline-fill: #d6d2cd;" data-darkreader-inline-fill="">Image cap</text>
+        </svg>
+        <div class="card-body">
+          <h5 class="card-title">Magicien</h5>
+          <p class="card-text">Il fait de la magie.</p>
+          <a href="#" class="btn btn-primary">Description</a>
         </div>
+      </div>
 
-        <div class="card flex-shrink-0 m-2" style="width: 18rem;">
-          <!-- SVG placeholder -->
-          <svg class="bd-placeholder-img card-img-top" width="100%" height="180" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Image cap" preserveAspectRatio="xMidYMid slice" focusable="false">
-            <title>Placeholder</title>
-            <rect width="100%" height="100%" fill="#868e96" style="--darkreader-inline-fill: #585f63;" data-darkreader-inline-fill=""></rect>
-            <text x="35%" y="50%" fill="#dee2e6" dy=".3em" style="--darkreader-inline-fill: #d6d2cd;" data-darkreader-inline-fill="">Image cap</text>
-          </svg>
-          <div class="card-body">
-            <h5 class="card-title">Exodia le maudit part 4/175</h5>
-            <p class="card-text">Il sert vraiement à rien pour l'instant</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
-          </div>
+      <div class="card flex-shrink-0 m-2">
+        <!-- SVG placeholder -->
+        <svg class="bd-placeholder-img card-img-top" width="100%" height="130" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Image cap" preserveAspectRatio="xMidYMid slice" focusable="false">
+          <title>Placeholder</title>
+          <rect width="100%" height="100%" fill="#868e96" style="--darkreader-inline-fill: #585f63;" data-darkreader-inline-fill=""></rect>
+          <text x="35%" y="50%" fill="#dee2e6" dy=".3em" style="--darkreader-inline-fill: #d6d2cd;" data-darkreader-inline-fill="">Image cap</text>
+        </svg>
+        <div class="card-body">
+          <h5 class="card-title">Péon</h5>
+          <p class="card-text">Il ne fait pas grand chose...</p>
+          <a href="#" class="btn btn-primary">Description</a>
         </div>
+      </div>
 
-        <div class="card flex-shrink-0 m-2" style="width: 18rem;">
-          <!-- SVG placeholder -->
-          <svg class="bd-placeholder-img card-img-top" width="100%" height="180" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Image cap" preserveAspectRatio="xMidYMid slice" focusable="false">
-            <title>Placeholder</title>
-            <rect width="100%" height="100%" fill="#868e96" style="--darkreader-inline-fill: #585f63;" data-darkreader-inline-fill=""></rect>
-            <text x="35%" y="50%" fill="#dee2e6" dy=".3em" style="--darkreader-inline-fill: #d6d2cd;" data-darkreader-inline-fill="">Image cap</text>
-          </svg>
-          <div class="card-body">
-            <h5 class="card-title">Exodia le maudit part 5/175</h5>
-            <p class="card-text">Il sert vraiement à rien pour l'instant</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
-          </div>
+      <div class="card flex-shrink-0 m-2 bg-dark opacity-50 text-white">
+        <svg class="bd-placeholder-img card-img-top" width="100%" height="130" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Image cap" focusable="false">
+          <title>Placeholder</title>
+          <rect width="100%" height="100%" fill="#868e96" style="--darkreader-inline-fill: #585f63;" data-darkreader-inline-fill=""></rect>
+          <text x="25%" y="50%" fill="#dee2e6" dy=".3em" style="--darkreader-inline-fill: #d6d2cd;" data-darkreader-inline-fill="">Image cap</text>
+        </svg>
+        <div class="card-body">
+          <h5 class="card-title">Nom carte</h5>
+          <p class="card-text">Vous n'avez pas encore cette carte</p>
+          <a href="#" class="btn btn-primary">Description</a>
         </div>
+      </div>
+
+      <div class="card flex-shrink-0 m-2 bg-dark opacity-50 text-white">
+        <svg class="bd-placeholder-img card-img-top" width="100%" height="130" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Image cap" focusable="false">
+          <title>Placeholder</title>
+          <rect width="100%" height="100%" fill="#868e96" style="--darkreader-inline-fill: #585f63;" data-darkreader-inline-fill=""></rect>
+          <text x="25%" y="50%" fill="#dee2e6" dy=".3em" style="--darkreader-inline-fill: #d6d2cd;" data-darkreader-inline-fill="">Image cap</text>
+        </svg>
+        <div class="card-body">
+          <h5 class="card-title">Nom carte</h5>
+          <p class="card-text">Vous n'avez pas encore cette carte</p>
+          <a href="#" class="btn btn-primary">Description</a>
+        </div>
+      </div>
     </div>
 
     <a type="button" class="btn-close bg-danger position-absolute top-0 end-0 translate-middle" aria-label="Home" href="../"></a>
