--- a/NaturalTheScattering/src/main/resources/static/carte/deck.html
+++ b/NaturalTheScattering/src/main/resources/static/carte/deck.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <meta charset="utf-8"/>
+  <meta charset="utf-8" />
   <title>Natural The Scattering Client App</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
@@ -22,9 +22,9 @@
             <text x="35%" y="50%" fill="#dee2e6" dy=".3em" style="--darkreader-inline-fill: #d6d2cd;" data-darkreader-inline-fill="">Image cap</text>
           </svg>
           <div class="card-body">
-            <h5 class="card-title">Exodia le maudit part1/175</h5>
-            <p class="card-text">Il sert vraiement à rien pour l'instant</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <h5 class="card-title">Exodia le maudit</h5>
+            <p class="card-text">Il est puissant... j'imagine?</p>
+            <a href="#" class="btn btn-primary">Description</a>
           </div>
         </div>
       </div>
@@ -34,22 +34,18 @@
       <button type="button" class="btn btn-primary btn-lg m-2">Supprimer deck</button>
     </div>
     <script type="text/javascript">
-      function deckBuild()
-        {
-          width = 900;
-          height = 900;
-          if(window.innerWidth)
-          {
-            var left = (window.innerWidth-width)/2;
-            var top = (window.innerHeight-height)/2;
-          }
-            else
-          {
-            var left = (document.body.clientWidth-width)/2;
-            var top = (document.body.clientHeight-height)/2;
-          }
-            window.open('construireDeck.html','Construire deck','top='+top+', left='+left+', width='+width+', height='+height+'');
-                       }
+      function deckBuild() {
+        width = 900;
+        height = 900;
+        if (window.innerWidth) {
+          var left = (window.innerWidth - width) / 2;
+          var top = (window.innerHeight - height) / 2;
+        } else {
+          var left = (document.body.clientWidth - width) / 2;
+          var top = (document.body.clientHeight - height) / 2;
+        }
+        window.open('construiredeck.html', 'Construire deck', 'top=' + top + ', left=' + left + ', width=' + width + ', height=' + height + '');
+      }
     </script>
 
     <a type="button" class="btn-close bg-danger position-absolute top-0 end-0 translate-middle" aria-label="Home" href="../"></a>
