--- a/NaturalTheScattering/src/main/resources/static/index.html
+++ b/NaturalTheScattering/src/main/resources/static/index.html
@@ -2,16 +2,16 @@
 <html>
 
 <head>
-  <meta charset="utf-8"/>
-  <title>Natural The Scattering Client App</title>
+  <meta charset="utf-8" />
+  <title>Natural The Scattering TCG</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </head>
 
 <body class="bg-dark vw-100 vh-100">
   <div class="container d-flex flex-column align-content-center position-absolute top-50 start-50 translate-middle">
-    <h1 class="display-1 text-center mb-5 text-white">Natural The Scattering</h1>
-    <h3 class="display-3 text-center mb-5 text-white">by Peons of the Barn (c)</h3>
+    <h1 class="display-1 text-center mb-5 text-white">Natural The Scattering©</h1>
+    <h3 class="display-3 text-center mb-5 text-white">par Peons of the Barn™</h3>
 
     <div class="btn-group-vertical btn-group-lg mx-auto" role="group" aria-label="Partie">
       <button type="button" class="btn btn-primary">Tournoi</button>
